force-app/main/default/objects/JoseObject__c/JoseObject__c.object-meta.xml
<CustomObject>
    <label>JoseObject</label>
    <nameField>
        <label>JoseObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JoseObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>