force-app/main/default/objects/JoseObject__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>