force-app/main/default/objects/JoseObject__c/fields/Test_Empty__c.field-meta.xml
<CustomField>
    <fullName>Test_Empty__c</fullName>
    <label>Test Empty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test 1</fullName>
            </value>
            <value>
                <fullName>Test 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>