force-app/main/default/objects/JoseObject__c/fields/Y_N__c.field-meta.xml
<CustomField>
    <fullName>Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Y/N</label>
    <type>Checkbox</type>
</CustomField>