force-app/main/default/objects/JoseObject__c/recordTypes/Jose1.recordType-meta.xml
<RecordType>
    <fullName>Jose1</fullName>
    <active>true</active>
    <label>Jose1</label>
</RecordType>