force-app/main/default/objects/JoseObject__c/recordTypes/Jose2.recordType-meta.xml
<RecordType>
    <fullName>Jose2</fullName>
    <active>true</active>
    <label>Jose2</label>
</RecordType>